--- a/css/nom.css
+++ b/css/nom.css
@@ -1,6 +1,8 @@
 @media all {
-  article > samp, section > samp,
-  article > code, section > code,
+  article > samp,
+  section > samp,
+  article > code,
+  section > code,
   pre {
     display: block;
     white-space: pre-wrap;
@@ -19,32 +21,20 @@
     background-color: #F7EfDf;
     padding-right: 0.3rem;
     padding-left: 0.3rem; }
-
-  kbd > kbd > samp {
-    /* Computer generated user input (menus) */ }
-
-  p > kbd > kbd {
-    /* Literal keypress input. */
-    border: 0.1em #C7C1A7 solid;
-    /*
-    	border: 0.1em #999 solid;
-    */ }
-
-  p > kbd > kbd {
-    background-color: #FFFFF0;
+  p > kbd {
+    /* User input */
+    background-color: #Fcf6e6;
+    line-height: 1.5rem;
+    font-size: 0.8rem;
     padding-right: 0.3rem;
-    padding-left: 0.3rem;
-    font-size: 0.8rem; }
-
-  article > samp {
-    color: #999; }
-
-  article > samp > kbd > kbd {
-    font-weight: bold; }
-
-  kbd > samp {
-    /* Computer generated user input */ }
-
+    padding-left: 0.3rem; }
+    p > kbd > kbd {
+      /* Literal keypress input. */
+      border: 0.1em #C7C1A7 solid;
+      background-color: #FFFFF0;
+      padding-right: 0.3rem;
+      padding-left: 0.3rem;
+      font-size: 0.8rem; }
   p > samp {
     /* Computer output */
     color: #FFFFF0;
@@ -53,19 +43,19 @@
     padding-right: 0.3rem;
     padding-left: 0.3rem; }
 
-  p > kbd {
-    /* User input */
-    background-color: #Fcf6e6;
-    line-height: 1.5rem;
-    font-size: 0.8rem;
-    padding-right: 0.3rem;
-    padding-left: 0.3rem; }
+  article > samp {
+    color: #999; }
+    article > samp > kbd > kbd {
+      font-weight: bold; }
 
   kbd.usr:before {
     content: "%\00a0"; }
-
   kbd.su:before {
     content: "#\00a0"; }
+  kbd > samp {
+    /* Computer generated user input */ }
+  kbd > kbd > samp {
+    /* Computer generated user input (menus) */ }
 
   samp > kbd {
     /* Computer echoed user input (shell commands) */
@@ -169,9 +159,8 @@
     font-size: 12pt;
     padding: 0;
     text-align: justify; }
-
-  p + p {
-    text-indent: 1.5em; }
+    p + p {
+      text-indent: 1.5em; }
 
   @page {
     margin-top: 11%;
@@ -188,16 +177,19 @@
     widows: 4;
     orphans: 4;
     counter-increment: page; }
+
   @page :left {
     margin-left: 22%;
     margin-right: 11%;
     @bottom-left {
       content: counter(page); } }
+
   @page :right {
     margin-left: 11%;
     margin-right: 22%;
     @bottom-right {
       content: counter(page); } }
+
   h1, h2 {
     page-break-before: right; }
 
@@ -221,6 +213,35 @@
 
   q ~ cite {
     font-style: italic; } }
+@media screen {
+  nav#toc {
+    position: fixed;
+    z-index: 100;
+    background: #FFFFF0;
+    top: 3em;
+    left: 0;
+    padding: 2em;
+    margin-left: -25em;
+    min-width: 23em;
+    border: 1px dashed #EEE8D8;
+    color: #EEE8D8;
+    max-height: 90%;
+    overflow-y: scroll;
+    transition: all 0.3s ease-in-out; }
+    nav#toc:hover {
+      color: initial;
+      border: 1px dashed #999;
+      width: 23em;
+      margin-left: 0; }
+    nav#toc > :first-child {
+      margin-bottom: 0; }
+    nav#toc .title {
+      transform: rotate(90deg);
+      -webkit-transform: rotate(90deg);
+      text-transform: uppercase;
+      position: absolute;
+      right: -4em;
+      top: 10em; } }
 @media all {
   * {
     font-size: 1em;
@@ -258,32 +279,134 @@
     height: 1.5em;
     text-align: center;
     margin: 1.5em; }
-
-  hr:before {
-    content: "\2042";
-    text-align: center; }
+    hr:before {
+      content: "\2042";
+      text-align: center; }
 
   mark {
     background-color: #FFCFC7;
     opacity: 0.8; } }
-nav#toc {
-  position: fixed;
-  z-index: 100;
-  background: #FFFFF0;
-  top: 3em;
+@font-face {
+  font-family: ornaments;
+  src: url("Nymphette.ttf"); }
+
+h2:before,
+h3:before,
+h4:before,
+h5:before,
+h6:before {
+  font-size: 1rem;
+  position: absolute;
   left: 0;
-  padding: 2em;
-  border: 1px dashed #999;
-  margin-left: -25em;
-  min-width: 23em;
-  transition: all 0.3s ease-in-out; }
-  nav#toc:hover {
-    width: 23em;
-    margin-left: 0; }
-  nav#toc .title {
-    transform: rotate(90deg);
-    -webkit-transform: rotate(90deg);
-    text-transform: uppercase;
-    position: absolute;
-    right: -4em;
-    top: 15em; }
+  width: 5em;
+  text-align: right;
+  font-variant: normal; }
+
+h1 {
+  text-align: center; }
+
+h1:before {
+  content: "k"; }
+
+h1:after {
+  content: "l"; }
+
+h1:before, h1:after {
+  text-transform: none;
+  font-family: 'ornaments';
+  padding-left: 0.5em;
+  padding-right: 0.5em; }
+
+@media tv, projection {
+  body > nav {
+    display: none; } }
+html, body {
+  width: 100%; }
+
+body {
+  width: 41em;
+  padding-right: 4em;
+  padding-left: 5em;
+  padding-bottom: 10em; }
+  body > header {
+    width: 43em; }
+    body > header > p {
+      font-size: 2em;
+      line-height: 3rem;
+      text-align: right; }
+      body > header > p + p {
+        line-height: 1.5em;
+        padding-right: 2rem;
+        padding-bottom: 1.5em;
+        margin: 0;
+        font-size: 1em;
+        font-style: italic;
+        color: #999; }
+  body > nav:not(#toc) {
+    padding-top: 9em;
+    top: 0;
+    height: 100%;
+    background-color: #EEE8D8;
+    left: 50em;
+    width: 20em;
+    position: fixed; }
+    body > nav:not(#toc) > a {
+      display: block;
+      padding-left: 2em;
+      line-height: 1.5em; }
+      body > nav:not(#toc) > a > time {
+        color: #ccc; }
+        body > nav:not(#toc) > a > time:before {
+          content: " - "; }
+    body > nav:not(#toc) > hr {
+      width: 70%;
+      border-bottom: 0.1em #ccc dashed;
+      height: 0.1em;
+      margin-top: 0.7em;
+      margin-bottom: 0.7em; }
+      body > nav:not(#toc) > hr:before {
+        content: none; }
+  body > footer {
+    font-variant: small-caps;
+    font-size: 0.8em;
+    letter-spacing: 0.1em;
+    position: fixed;
+    right: 1em;
+    bottom: 1em;
+    color: #ccc; }
+
+main > footer {
+  display: block;
+  text-align: right;
+  color: #ccc;
+  position: relative;
+  top: 3em; }
+
+article {
+  margin-bottom: 3em; }
+  article > header {
+    display: block;
+    border-top: 0.1em #EEE8D8 solid;
+    line-height: 1.4em; }
+    article > header > a {
+      display: block; }
+      article > header > a:hover {
+        text-decoration: none; }
+        article > header > a:hover > h1 {
+          color: #ccc; }
+      article > header > a > h1 {
+        display: inline;
+        color: #333; }
+    article > header time {
+      padding-left: 0.5em;
+      color: #ccc; }
+      article > header time:before {
+        content: "\00ab";
+        padding-right: 0.5em; }
+    article > header + p {
+      margin-top: 1.5em; }
+  article > footer {
+    color: #ccc;
+    text-align: right; }
+  article p {
+    text-align: justify; }
