--- a/scss/nom.scss
+++ b/scss/nom.scss
@@ -3,35 +3,14 @@
 
 @import "settings";
 
-@import 
+@import
   "components/code",
   "components/counters",
   "components/headers",
   "components/print",
   "components/quotes",
+  "components/toc",
   "components/typography";
 
-nav#toc {
-	position: fixed;
-	z-index: 100;
-	background: #FFFFF0;
-	top: 3em;
-	left: 0;
-	padding: 2em;
-	border: 1px dashed #999;
-	margin-left: -25em;
-	min-width: 23em;
-	transition: all 0.3s ease-in-out;
-	&:hover {
-		width: 23em;
-		margin-left: 0;
-	}
-	.title {
-		transform: rotate(90deg);
-		-webkit-transform: rotate(90deg);
-		text-transform: uppercase;
-		position: absolute;
-		right: -4em;
-		top: 15em;
-	}
-}
+@import "journal";
+
