--- a/scss/components/_print.scss
+++ b/scss/components/_print.scss
@@ -8,12 +8,12 @@
 		font-size: 12pt;
 		padding:0;
 		text-align: justify;
-	}
-	p + p {
-		text-indent: 1.5em;
-	}
+    	+ p {
+    		text-indent: 1.5em;
+    	}
+    }
 	@page {
-	
+
 		margin-top: 11%;
 		margin-bottom: 22%;
 	/*
@@ -53,7 +53,7 @@
 	a {
 	}
 	body > header,
-	body > footer, 
+	body > footer,
 	menu, nav {
 		display: none;
 	}
