--- a/scss/components/_headers.scss
+++ b/scss/components/_headers.scss
@@ -1,39 +1,60 @@
+// Copyright (c) 2012 xles <xles@miraukulix.org>
+//
+// Permission is hereby granted, free of charge, to any person obtaining
+// a copy of this software and associated documentation files
+// (the "Software"), to deal in the Software without restriction,
+// including without limitation the rights to use, copy, modify, merge,
+// publish, distribute, sublicense, and/or sell copies of the Software,
+// and to permit persons to whom the Software is furnished to do so,
+// subject to the following conditions:
+//
+// The above copyright notice and this permission notice shall be
+// included in all copies or substantial portions of the Software.
+//
+// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+// EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+// MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
+// IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
+// CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
+// TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
+// SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
 @media all {
 	h1, h2, h3, h4, h5, h6 {
 		font-weight: normal;
 		line-height: 1.5em;
 		margin-bottom: 1.5em;
-		font-size: 1em; 
+		font-size: 1em;
 	}
 	p {
-		+ h2, 
+		+ h2,
 		+ h3,
 		+ h4,
 		+ h5,
 		+ h6 {
-			margin-top: 1.5em;	
+			margin-top: 1.5em;
 		}
 	}
 	h1 {
 		text-transform: capitalize;
 	}
-	h2 { 
+	h2 {
 		letter-spacing: 0.1em;
 		font-family: $lining-font;
 		text-transform: uppercase;
 	}
-	h3 { 
-		font-weight:  bold; 
+	h3 {
+		font-weight:  bold;
 	}
-	h4 { 
+	h4 {
 		letter-spacing: 0.1em;
 		text-transform: lowercase;
-		font-variant: small-caps; 
+		font-variant: small-caps;
 	}
-	h5 { 
+	h5 {
 		font-style: italic;
 	}
-	h6 { 
+	h6 {
 		margin: 0;
 		float: left;
 		margin-right: 0.2em;
